--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ html,body{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
+  background-color: rgb(245, 245, 245);
 }
 
 .container{
