--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,20 @@
-html,body{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+html,
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   background-color: rgb(245, 245, 245);
 }
 
-.container{
+.container {
   margin: 80px auto 0 auto;
   max-width: 1200px;
 }
 
-.nav-container{
+.nav-container {
   margin: auto;
 }
 
-a{
+a {
   text-decoration: none;
 }
